--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
                 <input class="form-control me-2" placeholder="Username">
                 <input class="form-control me-2" placeholder="Password">
                 <button class="btn btn-outline-success" type="submit" style='margin-right:10px'>Login</button>
-                <button class="btn btn-outline-success" type="submit">Registration</button>
+                <button formaction="/registration" formmethod="post" class="btn btn-outline-success">Registration</button>
             </form>
         </div>
     </div>
