--- a/src/main/resources/templates/index_user.html
+++ b/src/main/resources/templates/index_user.html
@@ -20,12 +20,12 @@
             <form class="d-flex" style='vertical-align: center;'>
 
                 <div style='position: relative'>
-                <h5 class="text-muted" style='margin-right:10px; horiz-align: center'>
-                    Hello, user
+                <h5  class="text-muted" style='margin-right:10px; horiz-align: center'>
+                    Hello, <b th:text="${firstName}">firstName</b>
                 </h5>
                 </div>
 
-                <button class="btn btn-outline-success">Logout</button>
+                <button formaction="/" class="btn btn-outline-success">Logout</button>
 
             </form>
         </div>
