--- a/src/main/resources/templates/index_admin.html
+++ b/src/main/resources/templates/index_admin.html
@@ -15,10 +15,7 @@
     </button>
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="/admin/addstory">Add story</a>
-      </li>
-      <li class="nav-item">
-        <input name="nickName" class="form-control" id="exampleFormControlInput2" placeholder="User Name">
+        <a class="nav-link active" aria-current="page" th:href="'/admin/addstory?userName=' + ${userName}">Add story</a>
       </li>
     </ul>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -29,7 +26,7 @@
 
         <div style='position: relative'>
           <h5 class="text-muted" style='margin-right:10px; horiz-align: center'>
-            Hello, <b th:text="${userName}">firstName</b>
+            Hello, <b th:text="${firstName}">firstName</b>
           </h5>
         </div>
 
