--- a/src/main/resources/templates/index_user.html
+++ b/src/main/resources/templates/index_user.html
@@ -21,7 +21,7 @@
 
                 <div style='position: relative'>
                 <h5  class="text-muted" style='margin-right:10px; horiz-align: center'>
-                    Hello, <b th:text="${userName}">firstName</b>
+                    Hello, <b th:text="${firstName}">firstName</b>
                 </h5>
                 </div>
 
