Added the username and date for the post to all the html files and tweaked the post outlook.

--- a/src/main/resources/templates/admin_addstory.html
+++ b/src/main/resources/templates/admin_addstory.html
@@ -32,11 +32,11 @@
 </nav>
 <div style="width: 50%; margin: auto">
     <form>
-        <div class="mb-3">
+        <div class="mb-3 shadow-lg p-3 mb-5 bg-body rounded">
             <label for="exampleFormControlInput1" class="form-label">Title</label>
             <input name="title" class="form-control" id="exampleFormControlInput1" placeholder="Title">
         </div>
-        <div class="mb-3">
+        <div class="mb-3 shadow-lg p-3 mb-5 bg-body rounded">
             <label for="exampleFormControlTextarea1" class="form-label">Content</label>
             <textarea name="content" class="form-control" id="exampleFormControlTextarea1" rows="20"></textarea>
         </div>
