--- a/src/main/resources/templates/index_user.html
+++ b/src/main/resources/templates/index_user.html
@@ -67,7 +67,7 @@
                         th:text="${comment.creationDate}">creation date
                     </li>
                     <li class="list-group-item" th:if="${story.id} == ${comment.story.id}"
-                        th:text="${comment.content}"></li>
+                        th:text="${comment.content}" style="word-break: break-all"></li>
 
                     <button class="btn" th:classappend="${storyStat.even}? 'btn-outline-dark' :'btn-outline-warning' "
                             th:if="${loggedinuser.id} == ${comment.user.id} and ${story.id} == ${comment.story.id}"
