--- a/src/main/resources/templates/index_admin.html
+++ b/src/main/resources/templates/index_admin.html
@@ -71,7 +71,7 @@
                     th:text="${comment.creationDate}">creation date
                 </li>
                 <li class="list-group-item" th:if="${story.id} == ${comment.story.id}"
-                    th:text="${comment.content}"></li>
+                    th:text="${comment.content}" style="word-break: break-all"></li>
 
                 <button class="btn" th:classappend="${storyStat.even}? 'btn-outline-dark' :'btn-outline-warning' "
                         th:each="user, commentStat: ${users}"
