--- a/src/main/resources/templates/index_admin.html
+++ b/src/main/resources/templates/index_admin.html
@@ -18,7 +18,7 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" th:href="'/admin/addstory?userName=' + ${userName}">Add
-                    story</a>
+                    Post</a>
             </li>
         </ul>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -47,10 +47,15 @@
        aria-current="true">
         <div class="d-flex w-100 justify-content-between">
             <form><h5 th:text="${story.title}"></h5>
+                <button class="btn" th:classappend="${storyStat.even}? 'btn-outline-dark' :'btn-outline-warning' "
+                        style="font-size: 13px; margin-left: 10px"
+                        th:formaction="'/editstory?userName=' + ${userName} + '&storyId=' + ${story.id}"
+                        formmethod="post">Edit Post
+                </button>
             <button class="btn" th:classappend="${storyStat.even}? 'btn-outline-dark' :'btn-outline-warning' "
                     style="font-size: 13px; margin-left: 10px"
                     th:formaction="'/deletestory?userName=' + ${userName} + '&storyId=' + ${story.id}"
-                    formmethod="post">Delete
+                    formmethod="post">Delete Post
             </button>
             </form>
             <small >
