set as an admin

--- a/src/main/resources/templates/index_admin.html
+++ b/src/main/resources/templates/index_admin.html
@@ -20,6 +20,10 @@
                 <a class="nav-link active" aria-current="page" th:href="'/admin/addstory?userName=' + ${userName}">Add
                     Post</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" th:href="'/setadmin?userName=' + ${userName}">Set
+                    Admin</a>
+            </li>
         </ul>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
