--- a/src/main/resources/templates/admin_addstory.html
+++ b/src/main/resources/templates/admin_addstory.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>Title</title>
+    <title>Add story</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-light">
@@ -43,6 +43,9 @@
 
             <button th:text="${s}!=null?'Edit post': 'Add post'" th:formaction="${s}!=null?'/admin?userName=' + ${userName} + '&storyId='  + ${s.id}:'/admin?userName=' + ${userName}" formmethod="post" class="btn btn-outline-primary">Add post</button>
     </form>
+    <p style="text-align: left; color: red"
+       th:if="${isNull} or ${isEmpty}" >Please fill every textboxes.</p>
 </div>
+
 </body>
 </html>
