--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>Title</title>
+    <title>Registration</title>
 </head>
 <body>
 
@@ -22,7 +22,7 @@
   </div>
   <div class="col-md-6">
     <label for="inputPassword" class="form-label">Password</label>
-    <input name="password" class="form-control" id="inputPassword" placeholder="Password">
+    <input name="password" type="password" class="form-control" id="inputPassword" placeholder="Password">
   </div>
 
   <div class="col-12">
